@startuml

title __LOGIN's Class Diagram__\n

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoggedInUserView {
          - displayName : String
          ~ LoggedInUserView()
          ~ getDisplayName()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginActivity {
          + onCreate()
          - showLoginFailed()
          - updateUiWithUser()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginFormState {
          - isDataValid : boolean
          - passwordError : Integer
          - usernameError : Integer
          ~ LoginFormState()
          ~ LoginFormState()
          ~ getPasswordError()
          ~ getUsernameError()
          ~ isDataValid()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginResult {
          - error : Integer
          ~ LoginResult()
          ~ LoginResult()
          ~ getError()
          ~ getSuccess()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginViewModel {
          - loginFormState : MutableLiveData<LoginFormState>
          - loginResult : MutableLiveData<LoginResult>
          + login()
          + loginDataChanged()
          ~ LoginViewModel()
          ~ getLoginFormState()
          ~ getLoginResult()
          - isPasswordValid()
          - isUserNameValid()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginViewModelFactory {
          + create()
      }
    }
  }
  

  edu.temple.homerecognition.ui.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.ui.login.LoginActivity o-- edu.temple.homerecognition.ui.login.LoginViewModel : loginViewModel
  edu.temple.homerecognition.ui.login.LoginResult o-- edu.temple.homerecognition.ui.login.LoggedInUserView : success
  edu.temple.homerecognition.ui.login.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  edu.temple.homerecognition.ui.login.LoginViewModel o-- edu.temple.homerecognition.data.LoginRepository : loginRepository
  edu.temple.homerecognition.ui.login.LoginViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
